vulkan: Add conservative synchronization to submit

Add missing value for required parameter pWaitDstStageMask to
command buffer submission. This fixes a validation error:

[25936:25936:0510/163736.372562:1612536696:ERROR:vulkan_instance.cc(24)] Object: 0x0 | vkQueueSubmit: required parameter pSubmits[0].pWaitDstStageMask specified as NULL. (null)

Bug: 840470
Test: Run vulkan_tests on linux with nvidia GPU

Change-Id: Ib7a70da78808872e60d6461cc2ff6495fc50115c
Reviewed-on: https://chromium-review.googlesource.com/1054497
Commit-Queue: Michael Spang <spang@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558441}
Former-commit-id: 46641e60d7be573707e9d09347afe0a1f4a2ef14